11/30/11 basics: don't add zoom controls to the play area
11/30/11 common: add ability to specify whether zoom controls should be added to the play area
11/30/11 basics: promote visibility control panel to top-level class ViewControlPanel, for symmetry with TrackControlPanel, and so we can work on module and control panel separately
11/30/11 basics: remove "Energy Graph" title from control panel, since it now contains a grid control
11/30/11 basics: Start without any track in the track playground tab
11/30/11 basics: Made grass frictionless in tab 1
11/29/11 basics: Do not bump splines above the ground by the width of the track so that y=0 won't be perturbed
11/29/11 basics: Move splines so that they sit on the ground
11/29/11 common: Made every other vertical grid line bold instead of every fifth
11/29/11 basics: Added 'show grid' to all tabs
11/29/11 basics: fix Reset All for all tabs. But for unknown reason, loadDefaultTrack needs to be called at end of module subclass constructors.
11/29/11 common: add missing @Overide to AbstractEnergySkateParkModule.reset, and call super.reset
11/29/11 basics: add ':' before "Basics" in title, the titling convention used in other basics sims (eg, states-of-matter)
11/29/11 basics: i18n of tab labels
11/29/11 basics: made it so the user can't manipulate the tracks in tabs 1-2
11/29/11 basics: change TrackControlPanel to extend ControlPanelNode, so that setting control panels to same width will be easier
11/29/11 basics: add ticks to Track Friction slider
11/29/11 basics: remove code that was constructing strings keys dynamically for the energy legend
11/29/11 basics: inline i18n of strings
11/29/11 basics: make “Bar Chart” a checkbox instead of a button, set its state when dialog is closed from window dressing
11/29/11 basics: extract constant TITLE_FONT for the title of controls, use it for "Energy Graphs", "Track Friction", "Stick to Track"